# FlossWing

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: schema.sql  tool-contracts.md
docs/plans/: 2026-05-25-v0.2-recon-plumbing.md  2026-06-02-v0.3-hunt-plumbing.md  2026-06-02-v0.4-sandbox.md  2026-06-02-v0.5-symbol-index.md  2026-06-02-v0.6-validate.md  2026-06-03-v0.8-dedupe.md  2026-06-04-v0.7-gapfill.md  2026-06-04-v0.9-trace.md  2026-06-04-v1.0-report.md  2026-06-15-eval-corpus-scoring.md  2026-06-15-schema-sync-check.md  2026-06-15-tui-dashboard.md
docs/specs/: 2026-05-25-v0.2-recon-plumbing-design.md  2026-06-02-v0.3-hunt-plumbing-design.md  2026-06-02-v0.4-sandbox-design.md  2026-06-02-v0.5-symbol-index-design.md  2026-06-02-v0.6-validate-design.md  2026-06-02-v0.7-gapfill-design.md  2026-06-02-v0.8-dedupe-design.md  2026-06-02-v0.9-trace-design.md  2026-06-02-v1.0-report-design.md  2026-06-15-eval-design.md  2026-06-15-schema-sync-check-design.md  2026-06-15-tui-dashboard-design.md  2026-06-17-model-provider-abstraction-design.md  2026-06-17-model-provider-abstraction-plan.md  2026-06-18-ollama-provider-design.md  2026-06-18-ollama-provider-plan.md  2026-07-15-tui-live-scan-status-design.md  2026-07-16-attack-class-expansion-design.md  2026-07-16-tui-copy-paste-design.md  2026-07-16-tui-live-token-cost-design.md
docs/superpowers/plans/: 2026-07-16-model-env-config.md  2026-07-16-submodule-walker.md  2026-07-16-validate-false-positive-reduction.md
docs/superpowers/specs/: 2026-07-16-model-env-config-design.md  2026-07-16-submodule-walker-design.md  2026-07-16-validate-false-positive-reduction-design.md
flosswing/: __init__.py  attack_classes.py  cli.py  config.py  envfile.py  errors.py  orchestrator.py  runpid.py  secrets_triage.py
flosswing/agent/: pricing.py  runtime.py  tool_registry.py
flosswing/agent/providers/: __init__.py  anthropic_sdk.py  base.py  ollama_native.py  registry.py
flosswing/eval/: corpus.py  runner.py  scoring.py
flosswing/eval/ground_truth/: v02_smoke.toml  v08_dedupe_smoke.toml
flosswing/index/: __init__.py  build.py  entry_points.py  extractor.py  grammars.py  walker.py
flosswing/prompts/: __init__.py
flosswing/prompts/attack_classes/: auth_bypass.md  broken_authorization.md  buffer_overflow.md  command_injection.md  crlf_injection.md  csrf.md  format_string.md  goroutine_leak.md  hardcoded_secrets.md  insecure_deserialization.md  integer_overflow.md  java_deserialization.md  ldap_injection.md  log_injection.md  nil_deref_in_error_path.md  nosql_injection.md  null_deref.md  open_redirect.md  path_traversal.md  prototype_pollution.md  redos.md  request_smuggling.md  soundness_bug.md  sqli.md  ssrf.md  ssti.md  toctou.md  unsafe_audit.md  unsafe_pickle.md  unsafe_pointer_misuse.md  unsafe_yaml.md  unwrap_in_reachable_path.md  use_after_free.md  xpath_injection.md  xss.md  xxe.md
flosswing/prompts/system/: dedupe.md  gapfill.md  hunt.md  recon.md  trace.md  validate.md
flosswing/sandbox/: __init__.py  base.py  docker.py  firejail.py  policy.py  select.py
flosswing/sandbox/images/: c.Dockerfile  cpp.Dockerfile  go.Dockerfile  java.Dockerfile  javascript.Dockerfile  python.Dockerfile  rust.Dockerfile  typescript.Dockerfile
flosswing/stages/: __init__.py  dedupe.py  gapfill.py  hunt.py  index_build.py  recon.py  report.py  trace.py  validate.py
flosswing/state/: db.py  heartbeat.py  models.py  session.py
flosswing/state/migrations/: env.py  script.py.mako
flosswing/state/migrations/versions/: 001_initial.py  002_session_heartbeats.py
flosswing/tools/: execution.py  findings.py  fs.py  run_state.py  search.py  symbols.py
flosswing/tui/: __init__.py  app.py  data.py  launcher.py  widgets.py
flosswing/tui/screens/: __init__.py  finding_detail.py  findings.py  new_scan.py  run_detail.py  runs.py  sessions.py
tests/: conftest.py
tests/corpus/v02_smoke/: README.md  pyproject.toml
tests/corpus/v02_smoke/src/example/: cli.py
tests/corpus/v08_dedupe_smoke/: README.md  app.py  pyproject.toml
tests/integration/: test_dedupe_smoke.py  test_eval_smoke.py  test_gapfill_smoke.py  test_ollama_integration.py  test_recon_smoke.py  test_sandbox_smoke.py  test_symbol_index_smoke.py  test_trace_smoke.py  test_validate_smoke.py
tests/unit/: test_agent_pricing.py  test_agent_runtime.py  test_attack_classes.py  test_cli.py  test_cli_env.py  test_cli_eval.py  test_cli_help.py  test_cli_report.py  test_config.py  test_db_naming.py  test_envfile.py  test_errors.py  test_errors_sandbox.py  test_errors_scrub.py  test_errors_symbols.py  test_errors_validate.py  test_eval_corpus.py  test_eval_manifests.py  test_eval_runner.py  test_eval_scoring.py  test_index_build.py  test_index_entry_points.py  test_index_extractor.py  test_index_grammars.py  test_index_walker.py  test_orchestrator.py  test_prompt_guidance.py  test_providers_anthropic.py  test_providers_anthropic_run_session.py  test_providers_base.py  test_providers_ollama.py  test_providers_registry.py  test_runpid.py  test_sandbox_base.py  test_sandbox_docker_args.py  test_sandbox_env_filter.py  test_sandbox_firejail.py  test_sandbox_policy.py  test_sandbox_select.py  test_schema_sync.py  (+31 more)
