[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flosswing"
version = "1.0.1"
description = "Local-CLI vulnerability research harness."
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "FlossWing contributors" }]
dependencies = [
    # Min pinned to 0.2.87: that's the version on which the SDK
    # exposes ResultMessage.subtype="success" co-existing with
    # is_error=True (and the canonical CLI-exit wrap text), which
    # flosswing/agent/runtime.py:_api_error_from_result and
    # _is_spurious_sdk_exit_error depend on (issue #22).
    "claude-agent-sdk>=0.2.87",
    "click",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "docker",
    "tree-sitter==0.23.2",
    "tree-sitter-python==0.23.6",
    "tree-sitter-c==0.23.4",
    "tree-sitter-cpp==0.23.4",
    "tree-sitter-rust==0.23.2",
    "tree-sitter-go==0.23.4",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-java==0.23.5",
    "python-ulid",
    "textual",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[project.scripts]
flosswing = "flosswing.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["flosswing"]

# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["flosswing/state/migrations/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
]
ignore = []

# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
# Migration scripts are imported dynamically by Alembic and don't benefit from
# strict typing; exclude them.
exclude = "^flosswing/state/migrations/versions/"

[[tool.mypy.overrides]]
# Third-party packages without stubs we care about typing through.
module = [
    "claude_agent_sdk",
    "claude_agent_sdk.*",
    "docker",
    "docker.*",
    "tree_sitter",
    "tree_sitter.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Textual ships py.typed but rich internals occasionally lack precise stubs;
# only silence missing-imports, keep our own code strictly typed.
module = ["rich.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# TUI screens that are referenced lazily (inside action methods) and are
# created in later tasks; ignore until all screen modules exist.
module = [
    "flosswing.tui.screens.new_scan",
]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
